--- a/backend/ottoservice/src/main/resources/application.properties
+++ b/backend/ottoservice/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 app.version=1.0.0
 
-pictures.save.directory=src/main/resources/static/uploads/
+#pictures.save.directory=src/main/resources/static/uploads/
+pictures.save.directory=/Users/snikoghosyan/
+
